src/Resources/app/storefront/src/scss/account/subscriptions.scss
.order-table-header-heading.heading-mollie-subscriptions {
    max-width: 350px;
}

.order-item-status-badge.order-item-status-badge-active {
    background-color: #26b6cf;
    color: #fff;
    margin: 10px 0;
}

.order-item-status-badge.order-item-status-badge-canceled {
    background-color: #ffb100;
    color: #fff;
    margin: 10px 0;
}

.order-item-status-badge.order-item-status-badge-paused {
    background-color: #707070;
    color: #fff;
    margin: 10px 0;
}

.order-item-status-badge.order-item-status-badge-skipped {
    background-color: #ffb100;
    color: #fff;
    margin: 10px 0;
}

.order-item-status-badge.order-item-status-badge-resumed {
    background-color: #26b6cf;
    color: #fff;
    margin: 10px 0;
}

.order-table-header-description {
    padding: 0 !important;
    display: block;
    font-weight: 400;
    margin-bottom: 1.5rem;
    width: 100%;
}

.subscription-toggle-button-wrapper {
    padding: 0 !important;
}

.subscription-hide-btn {
    margin-bottom: 25px;
    float: right;

    .subscription-hide-btn-text {
        display: block;
    }

    .subscription-view-btn-text {
        display: none;
    }

    &.collapsed {
        .subscription-hide-btn-text {
            display: none;
        }

        .subscription-view-btn-text {
            display: block;
        }
    }
}

.subscription-item-detail {
    padding: 0 !important;
}

.subscription-edit-shipping-address-modal,
.subscription-edit-billing-address-modal {
    .modal-dialog {
        @extend .modal-lg;
    }
}

.btn-mollie-subscription-cancel {
    color: #e60909;
}

